updatey taza try

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
           <a
             href="#"
             class="block px-4 py-2 text-gray-800 hover:bg-amber-100 rounded md:p-0 md:hover:bg-transparent md:text-white transition-all duration-200"
-            >خەزنکردنی خواردن</a
+            >داشبۆرد </a
           >
           <a
             href="#"
             class="block px-4 py-2 text-gray-800 hover:bg-amber-100 rounded md:p-0 md:hover:bg-transparent md:text-white transition-all duration-200"
-            >بەشی فرۆشتن</a
+            > ڕاپۆرت</a
           >
         </nav>
       </div>
@@ -342,7 +342,7 @@
           <!--حساباتی خواردنەکا-->
 
           <div
-            class="summary-box md:w-100 h-full md:max-h-full p-4 bg-white rounded shadow"
+            class="summary-box md:ml-10 md:mt-10 md:w-100 h-full md:max-h-full p-4 bg-white rounded shadow"
           >
             <h2 class="text-lg font-bold mb-2">حساباتی خواردنەکان</h2>
             <div>
