--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سیستەمی کاشێری</title>
-    <link href="./src/output.css" rel="stylesheet" />
-    <link href="./src/input.css" rel="stylesheet" />
+    <link href="/public/input.css" rel="stylesheet" />
+    <link href="/public/output.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
