fix: move css files to root/public and update paths

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سیستەمی کاشێری</title>
-    <link href="/public/input.css" rel="stylesheet" />
-    <link href="/public/output.css" rel="stylesheet" />
-
+   <link href="output.css" rel="stylesheet" />
+<link href="input.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
