--- a/index.html
+++ b/index.html
@@ -87,11 +87,10 @@
                 alt=""
               />
               <h2 class="font-bold mb-2 text-base sm:text-lg">
-                لەفەی <span id="namefood">فلاوفل</span>
+                لەفەی فلاوفل
               </h2>
               <div
-                class="text-base sm:text-lg flex flex-col items-center gap-1"
-              >
+                class="text-base sm:text-lg flex flex-col items-center gap-1">
                 ٥٠٠ دینار
                 <div class="flex gap-2 justify-center">
                   <button
