--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سیستەمی کاشێری</title>
-
-    <link href="./src/output.css" rel="stylesheet" />
+    <link href="/css/input.css" rel="stylesheet" />
+    <link href="/css/output.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -90,7 +90,7 @@
                 لەفەی فلاوفل
               </h2>
               <div
-                class="text-base sm:text-lg flex flex-col items-center gap-1">
+                class="text-base sm:text-lg flex flex-col items-center gap-1" >
                 ٥٠٠ دینار
                 <div class="flex gap-2 justify-center">
                   <button
@@ -371,7 +371,7 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
