--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سیستەمی کاشێری</title>
-    <link href="/css/input.css" rel="stylesheet" />
     <link href="/css/output.css" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -371,7 +370,7 @@
       </div>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
